finish squashing bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,4 +189,9 @@ label {
 	font-size: 2em;
 	margin: 3px;
 	vertical-align: middle;
+	color: #FF9219;
+}
+
+.modal-large {
+     width: 80%;
 }
